traefik-forward-auth/deployment.yaml
#
# Traefik Forward Auth Deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-forward-auth
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: traefik-forward-auth
    spec:
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 60
      containers:
        - image: thomseddon/traefik-forward-auth:2-arm64
          name: traefik-forward-auth
          resources:
            requests:
              cpu: "100m"
              memory: "50Mi"
            limits:
              cpu: "300m"
              memory: "150Mi"
          ports:
            - containerPort: 4181
              protocol: TCP
          volumeMounts:
            - name: configs
              mountPath: /config
              subPath: traefik-forward-auth.ini
      volumes:
        # - name: configs
        #   configMap:
        #     name: configs
        - name: traefik-forward-auth-secrets
          secret:
            secretName: traefik-forward-auth-secrets
